# monolith

./: Cargo.toml
examples/parser/: dataset.rs  models.rs  parser.rs
examples/parser/systems/: chen_manning_14.rs  dozat_manning_17.rs  kiperwasser_goldberg_16_transition.rs  mod.rs
examples/tagger/: dataset.rs  models.rs  tagger.rs  utils.rs
src/: lib.rs
src/app/: app.rs  main.rs  mod.rs  prelude.rs
src/dataset/: conll.rs  mod.rs
src/io/: cache.rs  embedding.rs  mod.rs  prelude.rs  serialize.rs
src/lang/: mod.rs  prelude.rs  rcstring.rs  simple.rs
src/logging/: app.rs  mod.rs
src/models/: cnn.rs  embed.rs  functions.rs  linear.rs  lstm.rs  mlp.rs  mod.rs
src/models/nlp/: char_cnn.rs  mod.rs
src/preprocessing/: mod.rs  text.rs
src/syntax/: mod.rs  transition.rs
src/syntax/graph/: mod.rs
src/syntax/transition/: arc_standard.rs  mod.rs  prelude.rs  state.rs
src/training/: callbacks.rs  mod.rs
src/utils/: env.rs  mod.rs  path.rs  primitiv.rs  rand.rs  uname.rs
tests/: dataset.rs  io.rs  models.rs  preprocessing.rs  syntax.rs  test_utils.rs
